--- a/index.html
+++ b/index.html
@@ -9,28 +9,34 @@
 
 <body>
     <div class="wrapper">
-        <h4>Input table</h4>
-        <textarea id="table-input" class="input" placeholder="Paste table" value=""></textarea>
-        <h4>Heading</h4>
-        <input type="checkbox" id="heading-input" checked>
-        <label for="heading">Yes</label>
-        <h4>Delimiter type</h4>
-        <ul class="delimiter-list">
-            <li>
-                <input type="radio" name="delimiter" id="tab-input" value="tab">
-                <label for="tab">Tab</label>
-            </li>
-            <li>
-                <input type="radio" name="delimiter" id="comma-input" value="comma">
-                <label for="comma">Comma</label>
-            </li>
-            <li>
-                <input type="radio" name="delimiter" id="other-input" value="other">
-                <label for="other">Other</label>
-                <input type="text" id="other-delimiter">
-            </li>
-        </ul>
-        <canvas id="canvas" class="canvas" width="640" height="480"></canvas>
+        
+        <div class="left">
+            <h4>Input table</h4>
+            <textarea id="table-input" class="table-input" placeholder="Paste table" value=""></textarea>
+            <h4>Heading</h4>
+            <input type="checkbox" id="heading-input" checked>
+            <label for="heading-input">Yes</label>
+            <h4>Delimiter type</h4>
+            <ul class="delimiter-list">
+                <li>
+                    <input type="radio" name="delimiter" id="tab-input" value="tab">
+                    <label for="tab-input">Tab</label>
+                </li>
+                <li>
+                    <input type="radio" name="delimiter" id="comma-input" value="comma">
+                    <label for="comma-input">Comma</label>
+                </li>
+                <li>
+                    <input type="radio" name="delimiter" id="other-input" value="other">
+                    <label for="other-input">Other</label>
+                    <input type="text" id="other-delimiter">
+                </li>
+            </ul>
+        </div>
+        <div class="right">
+            <h4>Chart</h4>
+            <canvas id="canvas" class="canvas" width="640" height="480"></canvas>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
