--- a/index.html
+++ b/index.html
@@ -4,38 +4,52 @@
 <head>
     <meta charset="utf-8">
     <title>Chart</title>
+    <link href='https://fonts.googleapis.com/css?family=Roboto:400,700,300' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
     <div class="wrapper">
-        
-        <div class="left">
-            <h4>Input table</h4>
-            <textarea id="table-input" class="table-input" placeholder="Paste table" value=""></textarea>
-            <h4>Heading</h4>
-            <input type="checkbox" id="heading-input" checked>
-            <label for="heading-input">Yes</label>
-            <h4>Delimiter type</h4>
-            <ul class="delimiter-list">
-                <li>
-                    <input type="radio" name="delimiter" id="tab-input" value="tab">
-                    <label for="tab-input">Tab</label>
-                </li>
-                <li>
-                    <input type="radio" name="delimiter" id="comma-input" value="comma">
-                    <label for="comma-input">Comma</label>
-                </li>
-                <li>
-                    <input type="radio" name="delimiter" id="other-input" value="other">
-                    <label for="other-input">Other</label>
-                    <input type="text" id="other-delimiter">
-                </li>
-            </ul>
-        </div>
-        <div class="right">
-            <h4>Chart</h4>
-            <canvas id="canvas" class="canvas" width="640" height="480"></canvas>
+        <header>
+            <h1>Chartmaker</h1></header>
+
+        <div class="content">
+
+            <div class="sidebar">
+                <h2>Input table</h2>
+                <textarea id="table-input" class="table-input" placeholder="Paste table" value=""></textarea>
+                <h2>Heading</h2>
+                <input type="checkbox" id="heading-input" checked>
+                <label for="heading-input">Yes</label>
+                <h2>Delimiter type</h2>
+                <ul class="delimiter-list">
+                    <li>
+                        <input type="radio" name="delimiter" id="tab-input" value="tab">
+                        <label for="tab-input">Tab</label>
+                    </li>
+                    <li>
+                        <input type="radio" name="delimiter" id="comma-input" value="comma">
+                        <label for="comma-input">Comma</label>
+                    </li>
+                    <li>
+                        <input type="radio" name="delimiter" id="other-input" value="other">
+                        <label for="other-input">Other</label>
+                        <input type="text" id="other-delimiter" class="other-delimiter">
+                    </li>
+                </ul>
+            </div>
+
+            <div class="main">
+
+                <div class="chart">
+                    <h2 id="chart-title">Chart</h2>
+                    <canvas id="canvas" class="canvas" width="640" height="480"></canvas>
+                </div>
+
+                <div class="data-view"></div>
+                
+            </div>
+
         </div>
     </div>
     <script src="script.js"></script>
